--- a/Acomp1/Acomp1.csproj
+++ b/Acomp1/Acomp1.csproj
@@ -164,8 +164,9 @@
   <ItemGroup>
     <Compile Include="IMax.cs" />
     <Compile Include="Max1.cs" />
+    <Compile Include="Max3.cs" />
     <Compile Include="Max2.cs" />
-    <Compile Include="Program1.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomArray.cs" />
   </ItemGroup>
